--- a/style.css
+++ b/style.css
@@ -1,85 +1,93 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
-    background-image: url(img/bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100vh;
-    padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  background-image: url(img/bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  padding: 1rem;
+}
+.header_container .score_container {
+  color: #efebebea;
+  font-size: 1.25rem;
+  font-weight: bold;
+  h2 {
+    display: inline-block;
+    font-size: 1.25rem;
+  }
+}
+.header_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 20px;
+}
+.header_container .reload {
+  color: #fff;
+  font-size: 2rem;
+  cursor: pointer;
+  user-select: none;
 }
 .main_container {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-.main_container .nav {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
-.main_container .nav h2 {
-    color: #fff;
-    margin-bottom: 10px;
-}
-.main_container .navList {
-    list-style: none;
-}
-.main_container .nav li {
-    position: relative;
-    color: #fff;
-    &::before {
-        content: '\21AA';
-        margin-right: 5px;
-    }
-}
-.main_container .reload {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #fff;
-    font-size: 2rem;
-    cursor: pointer;
-    user-select: none;
+  flex: 1; /* Imporatant to take all space */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .main_container .box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 3rem;
-    background-color: #ffffff37;
-    border: 1px solid #000;
-    padding: 1rem;
-    border-radius: 5px;
-    width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 3rem;
+  background-color: #ffffff37;
+  border: 1px solid #000;
+  padding: 1rem;
+  border-radius: 5px;
+  width: 500px;
 }
 .main_container .box h1 {
-    color: #00ffe1;
-    text-align: center;
+  color: #00ffe1;
+  text-align: center;
 }
 .main_container .box #reaction {
-    display: block;
-    max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
 .main_container .box #start {
-    border: 1px solid #2f3b3b;
-    outline: none;
-    background-color: #fff;
-    padding: 15px 20px;
-    width: 100%;
-    border-radius: 10px;
-    color: #000;
-    text-transform: capitalize;
-    cursor: pointer;
-    font-size: 1.5rem;
-    font-weight: bold; 
-    transition: .2s;
+  border: 1px solid #2f3b3b;
+  outline: none;
+  background-color: #fff;
+  padding: 15px 20px;
+  width: 100%;
+  border-radius: 10px;
+  color: #000;
+  text-transform: capitalize;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: 0.2s;
+  &:hover {
+    opacity: 0.8;
+  }
+}
+.footer_conatiner {
+  color: #fff;
+  text-align: center;
+  a {
+    color: #00ffe1;
+    transition: 0.2s;
     &:hover {
-        opacity: .8;
+      opacity: 0.8;
     }
+  }
 }
