--- a/style.css
+++ b/style.css
@@ -79,7 +79,10 @@ body {
   }
 }
 .footer_conatiner {
-  color: #fff;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    p {
+        color: #fff;
+    }
   text-align: center;
   a {
     color: #00ffe1;
