--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   display: flex;
   flex-direction: column;
-  background-image: url(img/bg.png);
+  background-image: url(assets/img/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
